name:                js0
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/UweSchmidt/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          uwe@fh-wedel.de
copyright:           Uwe Schmidt
category:            development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.JS0.AST
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable js0
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , js0
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , js
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/js0
